reduced size of font on iphone, fixed h1 style on main header, accidently shrunk its margins

--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -1,3 +1,9 @@
+@media screen and (max-device-width: 480px) and (orientation:portrait) {
+  body {
+    font-size: 1em !important;
+  }
+}
+
 * {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);  
 }
@@ -78,11 +84,6 @@ h6 {
     text-align: center;
     padding-bottom: 0;
     padding-left: 0;
-
-    h1 {
-      margin-top: 10px;
-      margin-bottom: 10px;
-    }
 
     border: {
       bottom: 1px solid rgba(255, 42, 6, 1.0);
